# LinearAlgebraLib

./: CMakeLists.txt  README.md
Sources/: Application.cpp
Sources/Math/: Matrix.cpp  Matrix.h
Sources/Tests/: Test.h  TestMatrix.h
Sources/Utils/: UtilityFunctions.h
